tests/tooling/fixtures/native/execution/negative/id_parser_missing_param_colon.objc3
module IdParserMissingParamColon;

fn pick(value id) -> i32 {
  return value;
}

fn main() -> i32 {
  return pick(1);
}
